[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Idioma.gd" type="Script" id=2]

[node name="Idioma" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 917.001, 583.5 )
scale = Vector2( 10.4547, 14.8681 )
texture = ExtResource( 1 )

[node name="Idiomas" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -129.0
margin_right = -3.0
margin_bottom = -41.0
rect_scale = Vector2( 2, 2 )
text = "Idiomas"
align = 1
valign = 1

[node name="Voltar" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_top = -136.0
margin_right = 528.0
margin_bottom = -116.0
text = "Voltar"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.414
anchor_top = 0.673
anchor_right = 0.574
anchor_bottom = 0.673
margin_left = -20.0
margin_top = -34.0
margin_right = 20.0
margin_bottom = 34.0

[node name="PTBR" type="Button" parent="VBoxContainer"]
margin_right = 258.0
margin_bottom = 20.0
text = "PortuguÃªs Brasileiro"

[node name="ENGUS" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 258.0
margin_bottom = 44.0
text = "English"

[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/PTBR" to="." method="_on_PTBR_pressed"]
[connection signal="pressed" from="VBoxContainer/ENGUS" to="." method="_on_ENGUS_pressed"]
